# cogni-slm

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  TASK_CHECKLIST.md  pyproject.toml  teacher_prompt_manifest.json  teacher_schema_manifest.json
configs/: README.md
datasets/: build_dataset.py  dataset_registry.json
docs/: annotation_protocol.md  architecture.md  architecture.mmd  baseline_analysis.md  behavior_spec.md  brainlift.md  data_generation.md  dataset_spec.md  evaluation_design.md  experiment_plan.md  literature_review.md  prd.md  problem.md  project_architecture.md  project_board.md  prompt_test.md  rebuild.md  repository_map.md  reproducibility.md  roadmap.md  teacher_prompt.md
evaluation/: README.md  __init__.py  harness_common.py  harness_data.py  harness_feedback.py  harness_metrics.py  harness_model.py  run_harness.py
notebooks/: evaluate_base_vs_tuned_colab.ipynb  evaluate_semantic_quality_colab.ipynb  inference.ipynb  label_compile_ap_tutor_colab_clean.ipynb  train_ap_tutor_production_colab.ipynb  train_colab.ipynb
scrapers/: README.md  __init__.py  base.py  html_scraper.py  json_scraper.py  policies.py  storage.py  types.py
scripts/: analyze_prompt_leakage.py  analyze_score_distributions.py  audit_ap_release_licenses.py  build_ap_fallacy_labeling_batch.py  build_ap_tutor_production_batch.py  build_ap_tutor_sft_from_teacher.py  build_dataset.py  build_fallacy_corpus.py  build_public_heldout_set.py  build_training_dataset.py  create_prompt_group_split_candidate.py  create_provenance_index.py  deduplicate_dataset.py  detect_near_duplicates.py  download_datasets.py  evaluate_ap_prompt_test_outputs.py  filter_dataset.py  generate_ap_model_predictions.py  generate_dataset_cards.py  generate_golden_dataset.py  generate_training_dataset.py  ingest_raw_essays.py  (+21 more)
(+374 files in other folders)
